# libregression

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.c  regression.py
include/regression/: bitset.h  matrix.h  quadratic.h
src/: CMakeLists.txt  matrix.c  quadratic.c
